# ags

./: flake.nix  generate_gir_dts.sh  meson.build  package-lock.json  package.json  post_install.sh
nix/: default.nix
subprojects/gshell/: LICENSE.md  meson.build
